# Soltalk

./: .gitignore  CLAUDE.md  README.md
Docs/: 2026.07.08_01_[Ref]_SolTalk_HANDOFF.md  2026.07.08_03_[Plan]_SolTalk_실행계획.md  2026.07.09_01_[Ref]_대시보드_인터페이스_참고.md  SolTalk.postman_collection.json  smartfarm_api_spec.md  smartfarm_ui_elements.md
backend/: pyproject.toml
backend/app/: agent.py  alerts_service.py  container.py  greenhouse_service.py  server.py  session_service.py  state.py
backend/app/data/: greenhouse_data.py  mock_data.py
backend/app/iot/: base.py  mock.py  virtual.py
backend/app/services/: __init__.py  alerts.py  chat_agent.py  greenhouse.py  persona.py  realtime_session.py  session.py  tool_execution.py  tool_executor.py  transcription.py
backend/env/: .env.example
backend/tests/: test_agent.py  test_alerts_service.py  test_container.py  test_greenhouse_service.py  test_mock_iot.py  test_realtime_session.py  test_realtime_session_service.py  test_server.py  test_session_service.py  test_tool_execution.py  test_tool_executor.py  test_transcription_service.py  test_virtual_adapter.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
todo/: BACKEND.md  FRONTEND.md  FRONTEND_통합_필수.md  PLANNING.md  README.md  SETUP.md  VIRTUALFARM.md  voice_feature_backend.md  voice_feature_frontend.md
virtualfarm/: ADAPTER_CONTRACT.md  README.md  pyproject.toml
virtualfarm/sim/: engine.py
virtualfarm/tests/: test_engine.py  test_farm.py  test_scenario.py  test_smoke.py
(+32 files in other folders)
